examples/test/testpolicy13239.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13239
  namespace: namespace31
spec:
  podSelector:
    matchLabels:
      key47: value19
      key0: value9
      key14: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value35
          key29: value10
          key38: value33
      podSelector:
        matchLabels:
          key31: value28
